test/gpu/native/errors/assertOnGpuNoLoops.chpl
on here.gpus[0] {
  @assertOnGpu
  var A = 1;
}
